fix alignment of description (image-collage-v3)

--- a/image-collage/v3/index.css
+++ b/image-collage/v3/index.css
@@ -274,6 +274,7 @@ a:focus-within {
 .title,
 .description {
 	margin: 10px 0;
+    text-align: center;
 }
 
 .dialog dialog {
